[package]
name = "parser"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = { version = "0.19.7", features = ["lexer"] }
regex = "1"
ptree = "0.4"
lazy_static = "1.4.0"
bitmaps = "3.2.0"
daggy = "*"
serde = { version = "1.0", features = ['derive']}
serde_json = "1.0"

[build-dependencies]
cc = "1.0.77"
lalrpop = "0.19.7"
dunce = "1.0.3"
